API: Rename rooms to locations
